--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,8 @@
 
   <modules>
     <module>API</module>
+    <module>v1_7_R1</module>
+    <module>v1_7_R2</module>
     <module>v1_7_R3</module>
     <module>v1_8_R1</module>
     <module>v1_8_R2</module>
