--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,14 @@ $RECYCLE.BIN/
 *.msm
 *.msp
 
+#craftbukkit files
+craftbukkit-1.8.4.jar
+craftbukkit-1.7.10-R0.1.jar
+craftbukkit-1.7.9-R0.2-SNAPSHOT.jar
+craftbukkit-1.8.jar
+craftbukkit-1.8.3.jar
+craftbukkit-1.8.4.jar
+
 # =========================
 # Operating System Files
 # =========================
@@ -26,8 +34,7 @@ $RECYCLE.BIN/
 .LSOverride
 
 # Icon must end with two \r
-Icon
-
+Icon
 # Thumbnails
 ._*
 
