--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,17 @@ Icon
 Network Trash Folder
 Temporary Items
 .apdisk
+
+SkyWarsReloadedPlugin/lib/craftbukkit-1.8.4.jar
+SkyWarsReloadedPlugin/lib/Multiverse-Core-2.5.jar
+v1_7_R3/lib/craftbukkit-1.7.10-R0.1.jar
+v1_7_R4/lib/craftbukkit-1.7.9-R0.2-SNAPSHOT.jar
+v1_8_R3/lib/craftbukkit-1.8.4.jar
+v1_8_R2/lib/craftbukkit-1.8.3.jar
+v1_8_R1/lib/craftbukkit-1.8.jar
+v1_7_R4/lib/craftbukkit-1.7.9-R0.2-SNAPSHOT.jar
+v1_7_R4/lib/craftbukkit-1.7.10-R0.1.jar
+v1_7_R3/lib/craftbukkit-1.7.9-R0.2-SNAPSHOT.jar
+v1_7_R3/lib/craftbukkit-1.7.10-R0.1.jar
+SkyWarsReloadedPlugin/lib/Multiverse-Core-2.5.jar
+SkyWarsReloadedPlugin/lib/VoidWorld.jar
