Improved 1.8 support, better multiworld support, bug fixes.

--- a/SkyWarsReloaded/src/main/resources/config.yml
+++ b/SkyWarsReloaded/src/main/resources/config.yml
@@ -9,6 +9,8 @@ teleportToSpawnOnWorldEnter: true
 resourcepack: https://www.dropbox.com/s/8scs6c911y3mqbg/taunts-resource-pack.zip?dl=1
 promptForResourcePackOnJoin: false
 lobbyBoardEnabled: true
+displayPlayerLevelOnXpBar: true
+enabledLobbyGuard: false
 economyEnabled: false
 game:
   xpForWin: 5
