--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -20,11 +20,11 @@
             <url>http://repo.dmulloy2.net/nexus/repository/public/</url>
         </repository>
         <repository>
-            <id>placeholderapi</id>
+            <id>placeholderapi-repo</id>
             <url>http://repo.extendedclip.com/content/repositories/placeholderapi/</url>
         </repository>
         <repository>
-           <id>mvdw-software</id>
+           <id>mvdw-repo</id>
            <url>http://repo.mvdw-software.be/content/groups/public/</url>
         </repository>
         <repository>
@@ -34,6 +34,10 @@
         <repository>
     	    <id>rayzr-repo</id>
             <url>https://cdn.rawgit.com/Rayzr522/maven-repo/master/</url>
+        </repository>
+        <repository>
+            <id>codemc-repo</id>
+            <url>https://repo.codemc.org/repository/maven-public/</url>
         </repository>
     </repositories>
 
