--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -61,6 +61,12 @@
             <artifactId>VaultAPI</artifactId>
             <version>1.6</version>
             <scope>provided</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.bukkit</groupId>
+                    <artifactId>bukkit</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>me.rayzr522</groupId>
@@ -72,12 +78,6 @@
             <artifactId>placeholderapi</artifactId>
             <version>2.8.2</version>
             <scope>provided</scope>
-        </dependency>
-         <dependency>
-           <groupId>org.spigotmc</groupId>
-           <artifactId>spigot-api</artifactId>
-           <version>1.12.2-R0.1-SNAPSHOT</version>
-           <scope>provided</scope>
         </dependency>
   		<dependency>
             <groupId>com.gmail.filoghost.holographicdisplays</groupId>
@@ -97,8 +97,18 @@
         <dependency>
             <groupId>be.maximvdw</groupId>
             <artifactId>MVdWPlaceholderAPI</artifactId>
-            <version>2.3.1-SNAPSHOT</version>
+            <version>2.5.1-SNAPSHOT</version>
             <scope>provided</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.spigotmc</groupId>
+                    <artifactId>spigot</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>be.maximvdw</groupId>
+                    <artifactId>MVdWUpdater</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
     </dependencies>
 
