Complete the cleanup

--- a/lobby/src/main/resources/plugin.yml
+++ b/lobby/src/main/resources/plugin.yml
@@ -1,7 +1,6 @@
 name: SkyWarsReloadedLobby
 main: com.walrusone.skywarsreloaded.SkyWarsReloaded
-version: 1.0
-
+version: ${project.version}
 softdepend: [Vault, PlaceholderAPI]
 
 commands:
