--- a/lobby/pom.xml
+++ b/lobby/pom.xml
@@ -78,6 +78,14 @@
                         </goals>
                     </execution>
                 </executions>
+                <configuration>
+                    <relocations>
+                        <relocation>
+                            <pattern>com.google.gson</pattern>
+                            <shadedPattern>com.walrusone.skywarsreloaded.libs.com.google.gson</shadedPattern>
+                        </relocation>
+                    </relocations>
+                </configuration>
             </plugin>
         </plugins>
     </build>
