--- a/plugin/src/main/resources/plugin.yml
+++ b/plugin/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: Skywars
 main: com.walrusone.skywarsreloaded.SkyWarsReloaded
-version: 3.3.1
+version: ${project.version}
 softdepend: [Vault, PlaceholderAPI, MVdWPlaceholderAPI, HolographicDisplays]
 
 commands:
