--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -49,13 +49,18 @@
             <type>pom</type>
             <scope>compile</scope>
         </dependency>
-
         <dependency>
-            <groupId>org.spigotmc</groupId>
-            <artifactId>spigot-api</artifactId>
-            <version>${spigot-api.version}</version>
+			<groupId>org.spigotmc</groupId>
+			<artifactId>spigot</artifactId>
+			<version>1.8-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
-        </dependency>
+		</dependency>
+		<dependency>
+			<groupId>org.spigotmc</groupId>
+			<artifactId>spigot</artifactId>
+			<version>1.9-R0.1-SNAPSHOT</version>
+            <scope>provided</scope>
+		</dependency>
         <dependency>
             <groupId>net.milkbowl.vault</groupId>
             <artifactId>VaultAPI</artifactId>
