Finalizing Changes for 3.4 Update
Ready for final testing

--- a/plugin/src/main/resources/messages.yml
+++ b/plugin/src/main/resources/messages.yml
@@ -1,7 +1,7 @@
 chat:
-  lobbychat: '&c[SkyWars]&6({elo} Elo){prefix}<{displayname}> {message}'
-  specchat: '&c[Spectator]&6({elo} Elo){prefix}<{displayname}> {message}'
-  ingamechat: '&c[SkyWars]&6({elo} Elo){prefix}<{displayname}> {message}'
+  lobbychat: '&c[SkyWars] &6({elo} Elo) {prefix} &f<{displayname}&f> {message}'
+  specchat: '&8[Spectator] &c[{mapname}&c] &6({elo} Elo) {prefix} &f<{displayname}&f> {message}'
+  ingamechat: '&c[{mapname}&c]&6({elo} Elo){prefix} &f<{displayname}&f> {message}'
   externalPrefix: '&6({elo} Elo)'
 command:
   kit-create: '&aCreated the kit {kit} &ausing your inventory. Use the other kit commands to finalize the kit!'
@@ -97,6 +97,7 @@ party:
 error:
   map-min-be-int: '&cMinimum value must be a integer!'
   map-name: '&cDisplay names must be longer than 1 character!'
+  map-remove: '&cThe map failed to be deleted. A manual deletion from the server may be necessary'
   map-creator: '&cCreator names must be longer than 1 character!'
   map-exists: '&cThere is already a map with that name!'
   map-world-exists: '&cThere is already a world loaded with that name. Cannot create new map!'
@@ -334,17 +335,17 @@ scoreboards:
     line3: '&a{mapname}'
     line4: ''
     line5: '&5WINNER:'
-    line6: '&a{winner}'
-    line7: ''
-    line8: '&5Restarting In:'
-    line9: '&a{restarttime}'
-    line10: 'remove'
-    line11: 'remove'
-    line12: 'remove'
-    line13: 'remove'
-    line14: 'remove'
-    line15: 'remove'
-    line16: 'remove'
+    line6: '&a{winner1}'
+    line7: '&a{winner2}'
+    line8: '&a{winner3}'
+    line9: '&a{winner4}'
+    line10: '&a{winner5}'
+    line11: '&a{winner6}'
+    line12: '&a{winner7}'
+    line13: '&a{winner8}'
+    line14: ''
+    line15: '&5Restarting In:'
+    line16: '&a{restarttime}'
   lobbyboard:
     line1: '&e&lSkyWars Stats'
     line2: ''
