--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.walrusone.skywarsreloaded</groupId>
         <artifactId>skywarsreloaded-parent</artifactId>
-        <version>3.3.2-SNAPSHOT</version>
+        <version>3.4-SNAPSHOT</version>
     </parent>
 
     <artifactId>skywarsreloaded-plugin</artifactId>
@@ -107,6 +107,11 @@
                     <artifactId>MVdWUpdater</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>com.walrusone.skywarsreloaded</groupId>
+            <artifactId>skywarsreloaded-nms-interfaces</artifactId>
+            <version>3.4-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
