Team Mode Final Touches and Flickerless Scoreboard System

--- a/plugin/src/main/resources/messages.yml
+++ b/plugin/src/main/resources/messages.yml
@@ -166,13 +166,18 @@ signs:
   line1: '&aSkyWars'
   line2: '&n&4{mapname}'
   line3: '&1{matchstate}'
-  line4: '&1{playercount} of {maxplayers}'
+  line4: '&1{playercount} of {maxplayers} Players'
+  line1team: '&aTeam SkyWars'
+  line2team: '&n&4{mapname}'
+  line3team: '&1{matchstate}'
+  line4team: '&1{playercount} of {maxplayers}'
   added: '&aSkyWars sign successfully added!'
   no-map: '&cThere is no map with that name!'
   remove: '&aSkyWars sign successfully removed!'
   addedleader: '&aSkyWars Leaderboard sign successfully added!'
   invalid-type: '&cThat is not a valid leaderboard type'
   invalid-range: '&cThat position is outside of your leaderboard range. Check your configuration.'
+  teamState: '&1{teamcount} of {maxteams} Teams'
 spectate:
   starting: '&aTeleporting to SkyWars match as a spectator'
   startmessage: '&aYou are now spectating. Press E to access menu.'
@@ -209,8 +214,16 @@ menu:
   usewin-playermsg: '&aYour Victory Sound has been changed to {sound}'
   no-use: '&cUnlocked at Level {level}'
   cost: '&cCost to Unlock: {cost}'
-  joingame-menu-title: '&5Join Game Menu'
+  joingame-menu-tile: '&5Join Game Menu'
+  joinloresingle1: '&bLeft Click to view'
+  joinloresingle2: '&bSingle Player Arenas'
+  joinloreteam1: '&bLeft Click to view'
+  joinloreteam2: '&bTeam Arenas'
+  joinsinglegame-menu-title: '&5Join SkyWars Menu'
+  jointeamgame-menu-title: '&5Join Team SkyWars Menu'
   spectategame-menu-title: '&5Spectate Game Menu'
+  spectatesinglegame-menu-title: '&5Spectate SkyWars Menu'
+  spectateteamgame-menu-title: '&5Spectate Team SkyWars Menu'
   kit-section-mnenu: '&5SELECT YOUR KIT'
   kit-voting-menu: '&5VOTE FOR KIT'
   chest-voting-menu: '&5VOTE FOR CHEST TYPE'
@@ -271,6 +284,8 @@ items:
   modifier-strength: '&bSTRENGTH'
   modifier-none: '&bNONE'
   joinmenu: '&bSKYWARS JOIN MENU'
+  joinsingle: '&6SINGLE PLAYER ARENAS'
+  jointeam: '&6TEAM ARENAS'
   spectatemenu: '&bSKYWARS SPECTATE MENU'
   skywars-options: '&bSKYWARS OPTIONS SELECTION MENU'
   particle-effect-sel: '&bPARTICLE EFFECT SELECTION MENU'
