--- a/plugin/src/main/resources/config18.yml
+++ b/plugin/src/main/resources/config18.yml
@@ -147,6 +147,10 @@ items:
   modifiernone: BOOK
   modifierrandom: NETHER_STAR
   joinselect: DIAMOND_HELMET
+  singleSlot: 11
+  singlemenu: REDSTONE_TORCH_ON
+  teamSlot: 15
+  teammenu: REDSTONE_COMPARATOR
   spectateselect: LEATHER_HELMET
   optionselect: EYE_OF_ENDER
   particleselect: BLAZE_POWDER
