Bug Fix and added Options Command

--- a/plugin/src/main/resources/messages.yml
+++ b/plugin/src/main/resources/messages.yml
@@ -138,7 +138,8 @@ game:
   won: '&aYou won {score} SkyWars on the map {map}'
   lost: '&cYou lost {score} SkyWars on the map {map}'
   left-the-game: '&6{player} &4has left the game!'
-  joined-the-game: '&6{player} &4has joined the game!'
+  waitstart-left-the-game: '&6{player} &4has left the game! &1{playercount} of {maxplayers} Players'
+  waitstart-joined-the-game: '&6{player} &4has joined the game! &1{playercount} of {maxplayers} Players'
   unlock-kit: '&a{player} has unlocked the kit {kit}'
   select-kit: '&4You selected the kit {kit}!'
   scoreboard-title: '&4&l{mapname}'
