Team Menu Formatting

--- a/plugin/src/main/resources/messages.yml
+++ b/plugin/src/main/resources/messages.yml
@@ -168,17 +168,18 @@ signs:
   line2: '&n&4{mapname}'
   line3: '&1{matchstate}'
   line4: '&1{playercount} of {maxplayers} Players'
-  line1team: '&aTeam SkyWars'
+  line1team: '&aTeam SkyWars - {teamsize}'
   line2team: '&n&4{mapname}'
   line3team: '&1{matchstate}'
-  line4team: '&1{playercount} of {maxplayers}'
+  line4team: '&1{playercount} of {maxplayers} Players'
   added: '&aSkyWars sign successfully added!'
   no-map: '&cThere is no map with that name!'
   remove: '&aSkyWars sign successfully removed!'
   addedleader: '&aSkyWars Leaderboard sign successfully added!'
   invalid-type: '&cThat is not a valid leaderboard type'
   invalid-range: '&cThat position is outside of your leaderboard range. Check your configuration.'
-  teamState: '&1{teamcount} of {maxteams} Teams'
+  teamSize: '&b{teamsize} Players per Team'
+  teamState: '&e{teamcount} of {maxteams} Teams'
 spectate:
   starting: '&aTeleporting to SkyWars match as a spectator'
   startmessage: '&aYou are now spectating. Press E to access menu.'
