Clickable Accept for Party Invites

--- a/plugin/src/main/resources/glasscolors.yml
+++ b/plugin/src/main/resources/glasscolors.yml
@@ -91,7 +91,7 @@ colors:
     position: 20
     page: 1
   blue:
-    displayname: '&Blue'
+    displayname: '&bBlue'
     level: 56
     cost: 100
     material: STAINED_GLASS
