--- a/lobby/pom.xml
+++ b/lobby/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.walrusone.skywarsreloaded</groupId>
         <artifactId>skywarsreloaded-parent</artifactId>
-        <version>3.4.1-SNAPSHOT</version>
+        <version>3.4.2-Snapshot</version>
     </parent>
 
     <artifactId>skywarsreloaded-lobby</artifactId>
