--- a/plugin/src/main/resources/config18.yml
+++ b/plugin/src/main/resources/config18.yml
@@ -34,6 +34,9 @@ game:
     speed:
     strength:
     jump: 
+teams:
+  usePlayerNames: true
+  usePlayerGlassColors: true
 chat:
   enableFormatter: true
   limitGameChatToGame: true
