--- a/plugin/src/main/resources/messages.yml
+++ b/plugin/src/main/resources/messages.yml
@@ -224,8 +224,8 @@ menu:
   joinloreteam2: '&bTeam Arenas'
   joinsinglegame-menu-title: '&5Join SkyWars Menu'
   jointeamgame-menu-title: '&5Join Team SkyWars Menu'
-  teamselection-menu-title: '&5Join Team Menu - {mapname}'
-  teamspectate-menu-title: '&5Spectate Team Menu - {mapname}'
+  teamselection-menu-title: '&5Join Menu - {mapname}'
+  teamspectate-menu-title: '&5Spectate Menu - {mapname}'
   viewteams: '&bRight Click to View Teams'
   spectategame-menu-title: '&5Spectate Game Menu'
   spectatesinglegame-menu-title: '&5Spectate SkyWars Menu'
