--- a/plugin/src/main/resources/mapFile.yml
+++ b/plugin/src/main/resources/mapFile.yml
@@ -5,6 +5,7 @@ registered:
 cage: standard
 teamSize: 1
 allowFriendlyFire: false
+environment: NORMAL
 events:
   DisableRegenEvent:
     enabled: false
