--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.walrusone.skywarsreloaded</groupId>
     <artifactId>skywarsreloaded-parent</artifactId>
-    <version>3.4.2-Snapshot</version>
+    <version>3.5-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <modules>
